# gROJ

./: LICENSE  Makefile  README  README.md
roj-common/: Makefile  rojfft.c  rojfft.h  rojrgb.c  rojrgb.h  rojtypes.h  rojvar.c  rojvar.h
roj-convert/: Makefile  config.status
roj-convert/autom4te.cache/: requests
roj-convert/src/: Makefile  Makefile.am  Makefile.in  rojconvert.c  rojconvert.h
roj-convert/src/.deps/: librojconvert_la-rojconvert.Plo
roj-debug/: Makefile  autoclean.sh  config.status
roj-debug/autom4te.cache/: output.0  requests
roj-debug/src/: Makefile  Makefile.am  Makefile.in  gstplugin.c  gstplugin.h  rojdebug.c  rojdebug.h
roj-debug/src/.deps/: librojdebug_la-rojdebug.Plo
roj-filter/: Makefile  autoclean.sh  config.status
roj-filter/autom4te.cache/: requests
roj-filter/src/: Makefile  Makefile.am  Makefile.in  gstplugin.c  rojfilter.c  rojfilter.h
roj-filter/src/.deps/: librojfilter_la-rojfilter.Plo
roj-gener/: Makefile  autoclean.sh  config.status
roj-gener/autom4te.cache/: requests
roj-gener/src/: Makefile  Makefile.am  Makefile.in  gstplugin.h  rojgener.c  rojgener.h
roj-gener/src/.deps/: librojgener_la-rojgener.Plo
roj-kadr/: Makefile  aclocal.m4  config.status
roj-kadr/autom4te.cache/: requests
roj-kadr/src/: Makefile  Makefile.am  Makefile.in  rojkadr.c  rojkadr.h
roj-kadr/src/.deps/: librojkadr_la-rojkadr.Plo
roj-line/: Makefile  config.status
roj-line/autom4te.cache/: output.1  requests  traces.0
roj-line/src/: Makefile  Makefile.am  Makefile.in  rojline.c  rojline.c~  rojline.h  rojline.h~
roj-line/src/.deps/: librojline_la-rojline.Plo
roj-load/: Makefile  config.status
roj-load/autom4te.cache/: requests
roj-load/src/: Makefile  Makefile.am  Makefile.in  rojload.c  rojload.h
roj-load/src/.deps/: librojload_la-rojload.Plo
roj-noise/: Makefile  config.status
roj-noise/autom4te.cache/: requests
roj-noise/src/: Makefile  Makefile.am  Makefile.in  gstplugin.c  rojnoise.c  rojnoise.h
roj-noise/src/.deps/: librojnoise_la-rojnoise.Plo
roj-olsa/: Makefile  config.status
roj-olsa/autom4te.cache/: requests
roj-olsa/src/: Makefile  Makefile.am  Makefile.in  rojolsa.c  rojolsa.h
roj-olsa/src/.deps/: librojolsa_la-rojolsa.Plo
roj-parcel/: Makefile  config.status
roj-parcel/autom4te.cache/: requests
roj-parcel/src/: Makefile  Makefile.am  Makefile.in  gstplugin.h  rojparcel.c  rojparcel.h
roj-parcel/src/.deps/: librojparcel_la-rojparcel.Plo
roj-pointer/: Makefile  config.status
roj-pointer/autom4te.cache/: requests
roj-pointer/src/: Makefile  Makefile.am  Makefile.in  rojpointer.c  rojpointer.c~  rojpointer.h
roj-pointer/src/.deps/: librojpointer_la-rojpointer.Plo
roj-raster/: Makefile  config.status  configure
roj-raster/autom4te.cache/: requests
roj-raster/src/: Makefile  Makefile.am  Makefile.in  rojraster.c  rojraster.c~  rojraster.h  rojraster.h~
roj-raster/src/.deps/: librojraster_la-rojraster.Plo
roj-reass/: Makefile  config.status
roj-reass/autom4te.cache/: requests
roj-reass/src/: Makefile  Makefile.am  Makefile.in  rojreass.c  rojreass.h
roj-reass/src/.deps/: librojreass_la-rojreass.Plo
roj-screen/: Makefile  config.status
roj-screen/autom4te.cache/: requests
roj-screen/src/: Makefile  Makefile.am  Makefile.in  rojscreen.c  rojscreen.h
roj-screen/src/.deps/: librojscreen_la-rojscreen.Plo
roj-stft/: Makefile  config.status  libtool
roj-stft/autom4te.cache/: requests
roj-stft/src/: Makefile  Makefile.am  Makefile.in  gstplugin.c  rojstft.c  rojstft.h
roj-stft/src/.deps/: librojstft_la-rojstft.Plo
test-bash/: convert.sh  debug.sh  gener.sh  parcel.sh  stft.sh
test-python/: draw.py  filter.py  groj.py  hist.py  kadr.py  line.py  load.py  mouse-olsa.py  mouse-olsa.py~  mouse.py  olsa.py  reass.py  test.py  test.txt
